--- a/react_app_spa/babel.config.json
+++ b/react_app_spa/babel.config.json
@@ -1,8 +1,12 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react",
-    "@babel/preset-typescript"
+    [
+      "@babel/preset-react", 
+      {
+        "runtime": "automatic"
+      }
+    ],
   ],
   "plugins": [
     [
@@ -18,8 +22,7 @@
       "presets": [
         ["@babel/preset-env", {
           "targets": "current node"
-        }],
-        "@babel/plugin-transform-modules-commonjs"
+        }]
       ]
     }
   }
